# ShortLang

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh  code.sl  config.c  config.h  f_read.c  git-patch.sh  main.c  start.sh
src/: config.c  config.h  const.h  f_read.c  f_read.h  io.c  io.h  lifecycle.c  lifecycle.h  main.c  memory.c  memory.h
src/code/: tokenizer.c  tokenizer.h
src/lang/: type.c  type.h
src/parser/: ast.c  ast.h  parse.c  parse.h
src/tokenizer/: tokenizer.c  tokenizer.h
